--- a/seva_samiti/src/AchievementsSection.css
+++ b/seva_samiti/src/AchievementsSection.css
@@ -10,9 +10,9 @@
     }
   }
   .achievements-content {
-    gap: 20px;
+    gap: 30px;
     display: flex;
-    margin-left:50px;
+    margin-left:20px;
     margin-bottom:100px;
   }
   @media (max-width: 991px) {
@@ -54,6 +54,8 @@
   @media (max-width: 991px) {
     .achievements-container {
       margin-top:0px;
+      justify-content: center;
+      align-items: center;
     }
   }
   .achievements-icon {
@@ -71,13 +73,14 @@
   }
   @media (max-width: 991px) {
     .achievements-text {
-      max-width: 100%;
+      max-width: 90%;
+      
     }
   }
   .achievements-title {
     font-weight: 700;
     font-size: 32px;
-    margin: 0 30px 30px 30px;
+    margin: 0 30px 30px 0px;
   }
   .achievements-description {
     font-weight: 400;
@@ -85,7 +88,7 @@
     line-height: 30px;
     letter-spacing: 1.6px;
     text-align:justify;
-    margin: 0px 30px 30px 30px;
+    margin: 0px 0px 30px 0px;
   }
   .bullet {
     font-weight: 400;
