--- a/seva_samiti/src/EventsSection.css
+++ b/seva_samiti/src/EventsSection.css
@@ -12,9 +12,9 @@
   }
 
   .events-content {
-    gap: 20px;
+    gap: 120px;
     display: flex;
-    margin: 100px 0px 80px 0px;
+    margin: 30px 0px 10px 0px;
   }
 
   @media (max-width: 991px) {
@@ -44,9 +44,10 @@
     border-radius: 25px;
     background-color: #ffffff;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.1);
-    margin-left: 50px;
+    margin-left: 20px;
     padding-bottom: 33px;
     display: flex;
+    width: 100%;
     flex-direction: column;
     overflow: hidden;
     justify-content: center;
@@ -124,9 +125,7 @@
     transition: box-shadow 0.3s ease;
   }
 
-  .event-container:hover {
-    box-shadow: 0 6px 18px rgba(0, 0, 0, 0.15);
-  }
+
 
   .date-container {
     display: flex;
